# Dragofactu

./: .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  MEMORIA_LARGO_PLAZO.md  PLAN_FRONTEND.md  README.md  README_FINAL.md  README_FIXED.md  STABILIZATION_COMPLETE.md  complete_dragofactu_app.py  debug_main.py  diary_notes.json  docker-compose.yml  dragofactu.db  dragofactu_complete.py  dragofactu_complete_backup.py  install.py  launch_dragofactu.py  launch_dragofactu_fixed.py  launch_final.py  launch_simple.py  main.py  methods_to_add.txt  pasos a seguir migracion.md  pyproject.toml  requirements.txt  run.py  setup.py  simple_dragofactu_app.py  simple_dragofactu_app_fixed.py  simple_main.py  start_dragofactu.sh  start_fixed.py  test_bypass_login.py  test_minimal.py
.github/workflows/: frontend-test.yml  test.yml
backend/: .env.example  .railwayignore  Dockerfile  alembic.ini  nixpacks.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/tests/: conftest.py  test_audit.py  test_auth.py  test_clients.py  test_dashboard.py  test_diary.py  test_documents.py  test_export_import.py  test_health.py  test_monitoring.py  test_products.py  test_reminders.py  test_reports.py  test_suppliers.py  test_workers.py
docs/: UI_DESIGN_SYSTEM.md  session-2026-01-13-ui-redesign.md
dragofactu/: __init__.py  main.py  os  sys
dragofactu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dragofactu/config/: __init__.py  config.py  translation.py  utils.py
dragofactu/models/: __init__.py  audit.py  database.py  entities.py
dragofactu/ui/: __init__.py  (+1 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
scripts/: init_db.py  test_app.py  test_login.py
(+170 files in other folders)
